--- a/src/main/webapp/nav.xhtml
+++ b/src/main/webapp/nav.xhtml
@@ -17,7 +17,7 @@
 		  <!-- Links -->
 		  <ul class="navbar-nav">
 		    <li class="nav-item">
-		      <a class="nav-link" href="welcome.jsf">Listado de cursos</a>
+		      <a class="nav-link" href="welcome.xhtml">Listado de cursos</a>
 		    </li>
 		  </ul>
 
